<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/nav_layout" />
    </LinearLayout>
   <GridLayout
       android:layout_width="match_parent"
       android:layout_marginTop="200dp"
       android:layout_height="wrap_content"
       android:rowCount="5"
       android:columnCount="1">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_modify_details"
        android:id="@+id/button_modify_details"
        android:layout_row="1"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"/>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_profile_pic"
           android:id="@+id/button_profile_picture"
           android:layout_row="2"
           android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
           android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_upi_details"
           android:id="@+id/button_upi_details"
           android:layout_row="3"
           android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
           android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/label_change_password"
           android:id="@+id/button_change_password"
           android:layout_row="4"
           android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
           android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_language"
           android:id="@+id/button_change_language"
           android:layout_row="5"
           android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
           android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"/>
   </GridLayout>
</RelativeLayout>