<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFreelancerActivity">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sih_logo"
        android:maxHeight="200dp"
        android:maxWidth="100dp"
        android:contentDescription="@string/image_content"
        android:id="@+id/sih_logo_image"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_provider_registration"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/sih_logo_image"
        android:textStyle="bold"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:id="@+id/provider_registration"
        android:layout_marginTop="@dimen/label_top_margin"
        android:fontFamily="@android:string/defaultMsisdnAlphaTag"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_role"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/label_role"
        android:layout_below="@id/provider_registration"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_role"
        android:textStyle="bold"
        android:id="@+id/input_role"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:background="@color/shadow"
        android:textColor="@android:color/holo_red_light"
        android:textAlignment="center"
        android:layout_below="@id/provider_registration"
        android:layout_toEndOf="@id/label_role"
        android:layout_toRightOf="@id/provider_registration"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"
        android:layout_below="@id/label_role"
        android:id="@+id/label_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_toEndOf="@id/label_name"
            android:layout_toRightOf="@id/label_name"
            android:layout_below="@id/input_role"
            android:textStyle="bold"
            android:id="@+id/input_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/text_name_hint"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"
        android:layout_below="@id/label_name"
        android:id="@+id/label_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_toEndOf="@id/label_name"
        android:layout_toRightOf="@id/label_name"
        android:layout_below="@id/input_name"
        android:textStyle="bold"
        android:id="@+id/input_email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/text_email_hint"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_font_size"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"
        android:text="@string/label_mobile"
        android:id="@+id/label_mobile"
        android:textStyle="bold"
        android:layout_below="@id/label_email"
        android:layout_marginTop="17dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/mobile_number_hint"
        android:textStyle="bold"
        android:id="@+id/input_mobile"
        android:layout_below="@id/input_email"
        android:layout_toEndOf="@id/label_mobile"
        android:layout_toRightOf="@id/label_mobile"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_aadhar"
        android:text="@string/text_aadhar"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:layout_below="@id/label_mobile"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"
        android:layout_marginTop="17dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_aadhar"
        android:hint="Aadhar Card Number"
        android:textStyle="bold"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@id/input_mobile"
        android:layout_toEndOf="@id/label_aadhar"
        android:layout_toRightOf="@id/label_aadhar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_password"
        android:text="@string/text_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_below="@id/label_aadhar"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginLeft="@dimen/provider_left_margin"
        android:layout_marginTop="17dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_password"
        android:hint="Abc@123"
        android:textStyle="bold"
        android:ems="9"
        android:inputType="textPassword"
        android:maxLength="@integer/passwordLength"
        android:layout_below="@id/input_aadhar"
        android:layout_toEndOf="@id/label_aadhar"
        android:layout_toRightOf="@id/label_aadhar"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_joinButton"
        android:text="JOIN"
        android:background="@color/colorJoinButton"
        android:shadowColor="@color/shadow"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/input_password"
        android:layout_marginTop="10dp"
        android:maxLength="20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/input_joinButton"
        android:layout_centerInParent="true"
        android:onClick="loginService"
        android:layout_marginTop="30dp" />
</RelativeLayout>