<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/sih_logo"
        android:layout_centerHorizontal="true"
        android:maxHeight="200dp"
        android:layout_marginTop="20dp"
        android:maxWidth="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/text_login"
        android:text="@string/login_page_text"
        android:textSize="30sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/secondary"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_role_text"
        android:layout_below="@id/text_login"
        android:layout_marginLeft="@dimen/left_margin_label"
        android:layout_marginStart="@dimen/provider_left_margin"
        android:layout_marginTop="10dp"
        android:id="@+id/roles"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/roles"
        android:layout_toEndOf="@id/roles"
        android:layout_marginTop="@dimen/label_top_margin"
        android:id="@+id/role_spinner"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/text_login"
        android:layout_centerHorizontal="true"
        android:entries="@array/roles_array"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:scrollbarStyle="insideInset"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/text_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/roles"
        android:layout_marginStart="@dimen/left_margin_label"
        android:layout_marginLeft="@dimen/left_margin_label"
        android:layout_marginTop="@dimen/label_top_margin"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/email_address"
        android:ems="10"
        android:layout_toEndOf="@id/email"
        android:layout_toRightOf="@id/email"
        android:layout_below="@id/role_spinner"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/email_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_password"
        android:text="@string/label_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/email"
        android:layout_marginLeft="@dimen/left_margin_label"
        android:layout_marginStart="@dimen/left_margin_label"
        android:layout_marginTop="@dimen/label_top_margin" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="7dp"
        android:id="@+id/password"
        android:hint="@string/hint_password"
        android:ems="10"
        android:layout_toEndOf="@id/text_password"
        android:layout_toRightOf="@id/text_password"
        android:layout_below="@id/email_address"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/text_login_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:textStyle="bold"
        android:onClick="loginDashboard"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="@dimen/label_top_margin"/>
</RelativeLayout>