<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:padding="16dp">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:contentDescription="@string/image_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/profile_picture"
        android:src="@drawable/sih_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/profile_picture"
        android:layout_toEndOf="@id/profile_picture"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/customer_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/customer_fullname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customer_email"
        android:text="@string/email_hint"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_toEndOf="@id/profile_picture"
        android:layout_below="@id/customer_name"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/profile_picture" />


</RelativeLayout>